src/parser/snapshots/monkey_language_server__parser__test__prefix_happy_1.snap
---
source: src/parser/test.rs
description: "-1"
expression: result
---
[
    Prefix {
        token: Token(Minus, "-", (0,0)->(0,1)),
        right: Int {
            token: Token(Int, "1", (0,1)->(0,2)),
            value: 1,
        },
    },
]

===================================

-1
