src/parser/snapshots/monkey_language_server__parser__test__prefix_happy_2.snap
---
source: src/parser/test.rs
description: "!true"
expression: result
---
[
    Prefix {
        token: Token(Bang, "!", (0,0)->(0,1)),
        right: Bool {
            token: Token(True, "true", (0,1)->(0,5)),
            value: true,
        },
    },
]

===================================

!true
