src/parser/snapshots/monkey_language_server__parser__test__prefix_happy_3_errors.snap
---
source: src/parser/test.rs
description: let b = !true
expression: "parser_errors(\"let b = !true\", errors)"
---
let b = !true
