src/parser/snapshots/monkey_language_server__parser__test__prefix_unhappy_1_errors.snap
---
source: src/parser/test.rs
description: "-@"
expression: "parser_errors(\"-@\", errors)"
---
-@
 ^ SyntaxError: Unexpected '@'.
