src/parser/snapshots/monkey_language_server__parser__test__return_happy_1.snap
---
source: src/parser.rs
description: return 1;
expression: stmts
---
[
    Return {
        token: Token(Return, "return", (0,0)->(0,6)),
        value: Some(
            Ok(
                Int {
                    token: Token(Int, "1", (0,7)->(0,8)),
                    value: 1,
                },
            ),
        ),
    },
]
