src/parser/snapshots/monkey_language_server__parser__test__return_happy_2_errors.snap
---
source: src/parser/test.rs
description: return nil;
expression: "parser_errors(\"return nil;\", errors)"
---
return nil;
