src/parser/snapshots/monkey_language_server__parser__test__return_happy_3.snap
---
source: src/parser/test.rs
description: return;
expression: result
---
[
    Return {
        token: Token(Return, "return", (0,0)->(0,6)),
        value: None,
    },
]

===================================

return;
