src/parser/snapshots/monkey_language_server__parser__test__return_happy_3_errors.snap
---
source: src/parser/test.rs
description: return;
expression: "parser_errors(\"return;\", errors)"
---
return;
